# argen

./: Cargo.toml  README.md  filename.json  specs.json
examples/: api.toml  example.c  example_cli.c  example_spec.toml  simple.c  simple.json  simple_gen.c  simple_gen.json
src/: args.rs  codegen.rs  main.rs
