[package]
name = "argen"
version = "1.0.0"
authors = ["Matt Lee <matt@kynelee.com>", "Lucas Morales <lucas@lucasem.com>"]

[dependencies]
getopts = "0.2"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
toml = {git = "https://github.com/alexcrichton/toml-rs"}
  # ^^ we use a feature that was *just* implemented, and isn't yet released
  # as of April 30, 2017. (deserialize enums)
  # so TODO: use a crates.io release, once that happens.
